Fission? Crash in [@ nsGlobalWindowInner::FreezeInternal]
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox89 | --- | unaffected |
| firefox90 | --- | disabled |
| firefox91 | --- | fixed |
People
(Reporter: pascalc, Assigned: smaug)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
Maybe Fission related. (DOMFissionEnabled=1)
Crash report: https://crash-stats.mozilla.org/report/index/9add03de-0a98-4079-b1ce-790bc0210622
MOZ_CRASH Reason: MOZ_DIAGNOSTIC_ASSERT(IsCurrentInnerWindow())
Top 10 frames of crashing thread:
0 xul.dll nsGlobalWindowInner::FreezeInternal dom/base/nsGlobalWindowInner.cpp:5607
1 xul.dll nsGlobalWindowInner::SyncStateFromParentWindow dom/base/nsGlobalWindowInner.cpp:5716
2 xul.dll nsGlobalWindowOuter::SetNewDocument dom/base/nsGlobalWindowOuter.cpp:2380
3 xul.dll nsDocumentViewer::InitInternal layout/base/nsDocumentViewer.cpp:900
4 xul.dll nsDocumentViewer::Init layout/base/nsDocumentViewer.cpp:682
5 xul.dll nsDocShell::Embed docshell/base/nsDocShell.cpp:5624
6 xul.dll nsDocShell::CreateContentViewer docshell/base/nsDocShell.cpp:7919
7 xul.dll nsDSURIContentListener::DoContent docshell/base/nsDSURIContentListener.cpp:179
8 xul.dll nsDocumentOpenInfo::TryContentListener uriloader/base/nsURILoader.cpp:596
9 xul.dll nsDocumentOpenInfo::OnStartRequest uriloader/base/nsURILoader.cpp:154
Updated•4 years ago
|
Comment 1•4 years ago
|
||
In the last three months, 72 out of 72 crashes have Fission enabled.
There are some crash reports from Nightly 90 and Beta 90.0b0 (maybe someone in the Fission Beta 90 experiment?), but most of the crashes are from Nightly 91. Seems like something changed recently that caused the crashes to spike in Nightly 91.
| Comment hidden (Intermittent Failures Robot) |
| Assignee | ||
Comment 3•4 years ago
|
||
This is most probably bfcache related.
I'll try to figure out some way to prevent this issue.
| Assignee | ||
Comment 4•4 years ago
|
||
The patch is based on the assumption that the assertion fails because of
https://searchfox.org/mozilla-central/rev/1c5c3f4ec274462b92cf5bd82235ae3a56c508e9/dom/base/nsGlobalWindowInner.cpp#2775
Comment 6•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Description
•